<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddActivity"
    tools:showIn="@layout/activity_add">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="@+id/PriceEdit"
        app:layout_constraintTop_toBottomOf="@+id/PriceEdit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/NameEdit"
        app:layout_constraintTop_toTopOf="@+id/NameEdit" />

    <EditText
        android:id="@+id/NameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/DescEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@+id/DescEdit"
        app:layout_constraintTop_toTopOf="@+id/DescEdit" />

    <EditText
        android:id="@+id/DescEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/PriceEdit"
        app:layout_constraintEnd_toEndOf="@+id/NameEdit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/price"
        app:layout_constraintEnd_toStartOf="@+id/PriceEdit"
        app:layout_constraintTop_toTopOf="@+id/PriceEdit" />

    <EditText
        android:id="@+id/PriceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/DescEdit"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>